Dockerize backend and add GitHub Actions push